re-org project file structure

--- a/apps/confd/templates/nginx-registry.tmpl
+++ b/apps/confd/templates/nginx-registry.tmpl
@@ -1,5 +1,7 @@
 upstream registry {
-    server {{ .confd_prod_service_registry_endpoint }};
+    {{ range $server := .confd_prod_service_registry_endpoint }}
+    server {{ $server.Value }};
+    {{ end }}
 }
 
 server {
